--- a/Club/home/templates/home/view_trainings.html
+++ b/Club/home/templates/home/view_trainings.html
@@ -1,55 +1,16 @@
+{% extends "home/base.html" %}
 {% load static %}
 
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>uHost</title>
-        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="{% static "home/css/shared.css" %}">
-        <link rel="stylesheet" href="{% static "home/css/main.css" %}">
-    </head>
-    
-    <body>
-        <header class="main-header">
-            <div>
-                <a href="index.html" class="main-header__brand">
-                    uHost
-                </a>
-            </div>
-            <nav class="main-nav">
-                <ul class="main-nav__items">
-                    <li class="main-nav__item">
-                        <a href="packages/index.html">Packages</a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a href="customers/index.html">Customers</a>
-                    </li>
-                    <li class="main-nav__item main-nav__item--cta">
-                        <a href="start-hosting/index.html">Start Hosting</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <ul>
-                {% for training in trainings %}
-                    <a href="/training-detail/{{training.id}}/"><li>{{ training }}</li></a>
-                {% endfor %}
-            </ul>
-        </main>
-        <footer class="main-footer">
-            <nav>
-                <ul class="main-footer__links">
-                    <li class="main-footer__link">
-                        <a href="#">Support</a>
-                    </li>
-                    <li class="main-footer__link">
-                        <a href="#">Terms of Use</a>
-                    </li>
-                </ul>
-            </nav>
-        </footer>
-    </body>
-</html>
+{% block title %} All trainings {% endblock title %}
+
+{% block content %}
+
+<div class="container">
+    <ul>
+        {% for training in trainings %}
+            <a href="/training-detail/{{training.id}}/"><li>{{ training }}</li></a>
+        {% endfor %}
+    </ul>
+</div>    
+
+{% endblock content %}
