try to fix calendar not showing

--- a/Club/home/templates/home/base.html
+++ b/Club/home/templates/home/base.html
@@ -16,11 +16,8 @@
   <!-- My own css file -->
   <link rel="stylesheet" href="{% static "home/css/stylesheet.css" %}">
 
-  {% block headerLinks %}
-  {% endblock headerLinks%}
-
-  {% block headerJS %}
-  {% endblock headerJS %}
+  {% block head %}
+  {% endblock head %}
 
 </head>
 <body>
