--- a/Club/home/templates/home/calendar_old.html
+++ b/Club/home/templates/home/calendar_old.html
@@ -1,3 +1,49 @@
+{% extends "home/base.html" %}
+{% load static %}
+
+{% block title %}Calendar{% endblock title %}
+
+{% block head %}
+<link rel='stylesheet' href="{% static "home/lib/fullcalendar.css" %}" />
+
+<script src="{% static "home/lib/jquery-3.3.1.min.js" %}"></script>
+<script src="{% static "home/lib/moment.js" %} "></script>
+<script src="{% static "home/lib/fullcalendar.js" %}"></script>
+
+<script>
+$(document).ready(function() {
+    $('#calendar').fullCalendar({
+        defaultDate: '2018-04-20',
+        editable: true,
+        eventLimit: true, // allow "more" link when too many events
+        events: [
+            {% for i in events %}
+            {
+                title: "{{ i.event_name}}",
+                start: '{{ i.start_date|date:"Y-m-d" }}',
+                end: '{{ i.end_date|date:"Y-m-d" }}',
+                url: "/training-detail/2/",
+            },
+            {% endfor %}
+        ]
+    });
+});
+</script>
+{% endblock head %}
+
+{% block content %}
+test
+<div class="container">
+    <main>
+        <div style="height:80px;"></div>
+        <div style="width:60%; margin-left: 280px;">
+            <div id="calendar"></div>
+        </div>
+    </main>
+</div>    
+{% endblock content %}
+
+
 {% load static %}
 
 <html lang="en">
