trainings are displayed in calendar. new tabs in heading.

--- a/Club/home/templates/home/base.html
+++ b/Club/home/templates/home/base.html
@@ -41,9 +41,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-custom">
-                <li class=""><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li class=""><a href="/home/">Home</a></li>
+                <li><a href="/all-trainings/">Trainings</a></li>
+                <li><a href="/calendar/">Calendar</a></li>
+                <li><a href="/profile/">Profile</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-xs">
                 <li><a href="register.html"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-user"></span> Register</button></a></li>
