--- a/Club/home/templates/home/view_trainings.html
+++ b/Club/home/templates/home/view_trainings.html
@@ -6,6 +6,7 @@
 {% block content %}
 
 <div class="container">
+    <h1>List of all standard trainings</h1>
     <ul>
         {% for training in trainings %}
             <a href="/training-detail/{{training.id}}/"><li>{{ training }}</li></a>
