visualupdate detailed training page

--- a/Club/home/templates/home/profile.html
+++ b/Club/home/templates/home/profile.html
@@ -20,7 +20,7 @@
           </ul>
         </div>
         <!-- Main content -->
-        <div class="col-md-9 col-md-offset-1">
+        <div class="col-md-9">
           <div class="row profile-content">
             <div class="col-md-2" id="profile-picture">
               <img src="http://i.imgur.com/Vsb9RI7.jpg" alt="profile picture" height="150px" width="" margin-top="10px"/>
