--- a/Club/home/static/home/css/stylesheet.css
+++ b/Club/home/static/home/css/stylesheet.css
@@ -93,13 +93,21 @@ ul.nav li a:hover, ul.nav li a:active,  ul.nav li a:focus {
 }
 
 
+/* */ /* */ /* */ /* */
+/* Padding styles */
+.padding-right-40 {
+  padding-right:40px;
+}
+
 /* */ /* */ /**/ /**/
 /* main content */
 /* side navigator styling */
 .side-nav{
   background-color:#ADC8D5;
   border-radius:5px;
-  padding-top:10px;
+  padding:10px;
+  margin: 15px;
+  margin-top:0px;
 }
 
 /* profile content styling*/
@@ -201,4 +209,13 @@ ul.tab{
   margin: 10px;
   padding: 10px;
   text-align: center;
+}
+
+/* */ /* */ /**/ /**/
+/* training-detail */
+
+.training-meta {
+  margin:30px;
+  margin-left:0px;
+  margin-bottom:40px;
 }
