--- a/Club/home/templates/home/base.html
+++ b/Club/home/templates/home/base.html
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand navbar-brand-custom">TrainME</a>
+            <a href="#" class="navbar-brand navbar-brand-custom">W<span class="small"></span>T<span class="small">rain</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-custom">
