added signup and logout page. updated profile page and header for login.

--- a/Club/home/templates/home/profile.html
+++ b/Club/home/templates/home/profile.html
@@ -26,7 +26,7 @@
               <img src="http://i.imgur.com/Vsb9RI7.jpg" alt="profile picture" height="150px" width="" margin-top="10px"/>
             </div>
             <div class="col-md-9 col-md-offset-1">
-              <h3>Wannes Van Praet</h3>
+              <h3>{{ request.user.username }}</h3>
               <h4>25</h4>
               <h4>burgerlijk ingenieur</h4>
               <hr>
