--- a/Club/home/templates/home/base.html
+++ b/Club/home/templates/home/base.html
@@ -37,18 +37,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand navbar-brand-custom">W<span class="small"></span>T<span class="small">rain</span></a>
+            <a href="/home/" class="navbar-brand navbar-brand-custom">W<span class="small"></span>T<span class="small">rain</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-custom">
                 <li class=""><a href="/home/">Home</a></li>
                 <li><a href="/all-trainings/">Trainings</a></li>
                 <li><a href="/calendar/">Calendar</a></li>
-                <li><a href="/profile/">Profile</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right hidden-xs">
-                <li><a href="register.html"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-user"></span> Register</button></a></li>
-                <li><a href="profile.html"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-log-in"></span> Login</button></a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="/profile/"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-user"></span> Profile</button></a></li>
+                    <li><a href="/logout/"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-log-out"></span> Logout</button></a></li>
+                {% else %}
+                    <li><a href="/signup/"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-user"></span> Register</button></a></li>
+                    <li><a href="/login/"><button type="button" class="btn btn-header"><span class="glyphicon glyphicon-log-in"></span> Login</button></a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
