--- a/Club/home/templates/home/profile.html
+++ b/Club/home/templates/home/profile.html
@@ -12,6 +12,15 @@
 <!-- Start of content of page -->
   <!-- side bar left -->
   <div class="container">
+
+      {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+      </ul>
+      {% endif %}
+
         <div class="col-md-2 side-nav">
           <ul>
             <li>Profile</li>
