--- a/Club/home/templates/home/view_training.html
+++ b/Club/home/templates/home/view_training.html
@@ -9,6 +9,7 @@
     <div class="col-md-3">
         <div class="side-nav">
             <h2>{{ training.name }}</h2>
+            <p><a href="/training-detail/{{ training.id }}/update/"><span class="glyphicon glyphicon-edit">Update training</span></a></p>
         </div>
         <div class="side-nav">
             <h2>{{ training.trainers.first_name }}</h2>
