added create training forms.

--- a/Club/home/templates/home/home.html
+++ b/Club/home/templates/home/home.html
@@ -9,9 +9,14 @@
 <div class="container">
     <h1>Choose one of the following</h1>
     <ul>
-        <a href=""><li>plan training</li></a>
-        <a href=""><li>new standard training</li></a>
-        <a href="/all-trainings/"><li>view all standard trainings</li></a>
+        <a href="/training/create/"><li>create new training</li></a>
+        <ul>
+            <a href="/warm-up/create/"><li>create new warm up</li></a>
+            <a href="/core/create/"><li>create new core</li></a>
+            <a href="/cool-down/create/"><li>create new cooling down</li></a>
+        </ul>
+        <a href="/training/plan/"><li>plan training</li></a>
+        <a href="/all-trainings/"><li>view all trainings</li></a>
     </ul>
 </div>    
 
