--- a/Club/home/static/home/css/stylesheet.css
+++ b/Club/home/static/home/css/stylesheet.css
@@ -112,12 +112,14 @@ ul.nav li a:hover, ul.nav li a:active,  ul.nav li a:focus {
   padding:10px;
   margin: 15px;
   margin-top:0px;
+  overflow:hidden;
 }
 
 /* profile content styling*/
 .profile-content{
   background-color:#ADC8D5;
   border-radius:5px;
+  padding:20px;
 }
 
 #profile-picture{
@@ -218,11 +220,6 @@ ul.tab{
 /* */ /* */ /**/ /**/
 /* training-detail */
 
-.training-meta {
-  margin:30px;
-  margin-left:0px;
-  margin-bottom:40px;
-}
 
 /* */ /* */ /**/ /**/
 /* messages */
