added subscribe for training

--- a/Club/home/templates/home/calendar.html
+++ b/Club/home/templates/home/calendar.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
                 start: '{{ i.date|date:"Y-m-d" }}',
                 end: '{{ i.date|date:"Y-m-d" }}',
                 url: "/training-detail/{{ i.id }}/",
-                color:"gray",
+                color:"lightblue",
                 textColor: "black",
                 description: "this is cool"
             },
