--- a/Club/home/templates/home/profile.html
+++ b/Club/home/templates/home/profile.html
@@ -12,7 +12,7 @@
 <!-- Start of content of page -->
   <!-- side bar left -->
   <div class="container">
-
+      <!-- print django messages framework -->
       {% if messages %}
       <ul class="messages">
           {% for message in messages %}
