--- a/Club/home/templates/home/view_trainings.html
+++ b/Club/home/templates/home/view_trainings.html
@@ -6,8 +6,16 @@
 {% block content %}
 
 <div class="container">
+    <!-- print django messages framework -->
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <!-- This week -->
-    <h1>List of planned trainings this week</h1>
+    <h1>This week: planned trainings</h1>
     <p><a href="/training-detail/week/{{ weekNumber }}/subscribe">signup for all trainings of this week</a></p>
     <p><a href="/training-detail/week/{{ weekNumber }}/unsubscribe">unsubscribe for all trainings of this week</a></p>
     <div>
@@ -28,7 +36,7 @@
         {% endfor %}
     </div>
     <!-- Next week -->
-    <h1>List of planned trainings next week</h1>
+    <h1>Next week: planned trainings</h1>
     <p><a href="/training-detail/week/{{ weekNumberPlus }}/subscribe">signup for all trainings of next week</a></p>
     <p><a href="/training-detail/week/{{ weekNumberPlus }}/unsubscribe">unsubscribe for all trainings of next week</a></p>
     <div>
