--- a/Club/home/templates/home/view_training.html
+++ b/Club/home/templates/home/view_training.html
@@ -6,6 +6,15 @@
 {% block content %}
 
 <div class="container">
+    <!-- print django messages framework -->
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <!-- This week -->
     <div class="col-md-3">
         {% if not training.is_standard%}
             <div class="side-nav">
