--- a/Club/home/templates/home/update_training.html
+++ b/Club/home/templates/home/update_training.html
@@ -45,12 +45,12 @@
             <label for="{{ form.message.id_for_label }}">Location:</label>
             <p>{{ training_form.location }}</p>
         </div>
-        <div class="fieldWrapper hideMe" style="display:none;">
+        <div class="fieldWrapper hideMe half" style="display:none;">
             {{ training_form.trainers.errors }}
             <label for="{{ form.message.id_for_label }}">Trainers:</label>
             <p>{{ training_form.trainers }}</p>
         </div>
-        <div class="fieldWrapper hideMe" style="display:none;">
+        <div class="fieldWrapper hideMe half" style="display:none;">
             {{ training_form.riders.errors }}
             <label for="{{ form.message.id_for_label }}">Riders:</label>
             <p>{{ training_form.riders }}</p>
